# models/user.js
@@ -1,20 +1,11 @@
+// models/user.js
 const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema({
-  name: String,
+  name: { type: String, required: true },
   email: { type: String, required: true, unique: true },
-  password: String, // Only for normal signup
-  role: { type: String, default: 'user' }, // e.g., 'admin', 'user'
-  token: String, // For JWT token storage
-  googleId: String
-});
+  password: { type: String, required: true },
+  role: { type: String, enum: ['user', 'admin'], default: 'user' },
+}, { timestamps: true });
 
 module.exports = mongoose.model('User', userSchema);
-
-
-
-
-
-
-
-
